--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.4",
+    "vue-build": "^3.0.0",
     "vue-router": "^3.0.2"
   },
   "browserslist": [
